syntax = "proto2";

package Botventure.Messages;

enum GameState{
  PLAYING = 0;
  SUCCESS = 1;
  FAILURE = 2;
}

message GameInfo{
  optional int32 turn_number = 1;
  optional GameState game_state = 2;
}
